==> OneKiwiTool/NucleoF401RE-LCD-LL/lcd/st7789/st7789.c <==
#include "st7789.h"
#include <string.h>
#include <stdint.h>
#include "stm32f4xx.h"
#define USE_SPI_DMA
#include <string.h>
 #define HOR_LEN 	5	//	Alse mind the resolution of your screen!

static void ST7789_WriteData(uint8_t* buff, size_t buff_size)
{

    ST7789_Select();
	ST7789_DC_Set();

    //for (uint16_t index = 0; index < buff_size; index++) {
        //Send_Data8(buff[index]);
    //}
    #ifdef USE_SPI_DMA
    Send_DMA_Data8(buff, buff_size);
    #else
    Send_Data8s(buff, buff_size);
    #endif
	ST7789_UnSelect();
}

void ST7789_Init(void)
{
	#ifdef USE_DMA
		memset(disp_buf, 0, sizeof(disp_buf));
	#endif
	LL_mDelay(25);
    ST7789_RST_Clr();
    LL_mDelay(25);
    ST7789_RST_Set();
    LL_mDelay(50);
		
    ST7789_WriteCommand(ST7789_COLMOD);		//	Set color mode
    ST7789_WriteSmallData(ST7789_COLOR_MODE_16bit);
  	ST7789_WriteCommand(0xB2);				//	Porch control
	{
		uint8_t data[] = {0x0C, 0x0C, 0x00, 0x33, 0x33};
		ST7789_WriteData(data, sizeof(data));
	}
	ST7789_SetRotation(ST7789_ROTATION);	//	MADCTL (Display Rotation)
	
	/* Internal LCD Voltage generator settings */
    ST7789_WriteCommand(0XB7);				//	Gate Control
    ST7789_WriteSmallData(0x35);			//	Default value
    ST7789_WriteCommand(0xBB);				//	VCOM setting
    ST7789_WriteSmallData(0x19);			//	0.725v (default 0.75v for 0x20)
    ST7789_WriteCommand(0xC0);				//	LCMCTRL	
    ST7789_WriteSmallData (0x2C);			//	Default value
    ST7789_WriteCommand (0xC2);				//	VDV and VRH command Enable
    ST7789_WriteSmallData (0x01);			//	Default value
    ST7789_WriteCommand (0xC3);				//	VRH set
    ST7789_WriteSmallData (0x12);			//	+-4.45v (defalut +-4.1v for 0x0B)
    ST7789_WriteCommand (0xC4);				//	VDV set
    ST7789_WriteSmallData (0x20);			//	Default value
    ST7789_WriteCommand (0xC6);				//	Frame rate control in normal mode
    ST7789_WriteSmallData (0x0F);			//	Default value (60HZ)
    ST7789_WriteCommand (0xD0);				//	Power control
    ST7789_WriteSmallData (0xA4);			//	Default value
    ST7789_WriteSmallData (0xA1);			//	Default value
	/**************** Division line ****************/

	ST7789_WriteCommand(0xE0);
	{
		uint8_t data[] = {0xD0, 0x04, 0x0D, 0x11, 0x13, 0x2B, 0x3F, 0x54, 0x4C, 0x18, 0x0D, 0x0B, 0x1F, 0x23};
		ST7789_WriteData(data, sizeof(data));
	}

    ST7789_WriteCommand(0xE1);
	{
		uint8_t data[] = {0xD0, 0x04, 0x0C, 0x11, 0x13, 0x2C, 0x3F, 0x44, 0x51, 0x2F, 0x1F, 0x1F, 0x20, 0x23};
		ST7789_WriteData(data, sizeof(data));
	}
    ST7789_WriteCommand (ST7789_INVON);		//	Inversion ON
	ST7789_WriteCommand (ST7789_SLPOUT);	//	Out of sleep mode
  	ST7789_WriteCommand (ST7789_NORON);		//	Normal Display on
  	ST7789_WriteCommand (ST7789_DISPON);	//	Main screen turned on	

	LL_mDelay(50);
	ST7789_Fill_Color(BLACK);				//	Fill with Black.
}

void ST7789_WriteChar(uint16_t x, uint16_t y, char ch, sFONT font, uint16_t color, uint16_t bgcolor)
{
	uint32_t i, b, j;
	ST7789_Select();
	ST7789_SetAddressWindow(x, y, x + font.Width - 1, y + font.Height - 1);

	for (i = 0; i < font.Height; i++) {
		b = font.data[(ch - 32) * font.Height + i];
		for (j = 0; j < font.Width; j++) {
			if ((b << j) & 0x8000) {
				uint8_t data[] = {color >> 8, color & 0xFF};
				ST7789_WriteData(data, sizeof(data));
			}
			else {
				uint8_t data[] = {bgcolor >> 8, bgcolor & 0xFF};
				ST7789_WriteData(data, sizeof(data));
			}
		}
	}
	ST7789_UnSelect();
}

void ST7789_WriteChar(uint16_t Xpoint, uint16_t Ypoint, const char Acsii_Char,
                    sFONT* Font, uint16_t Color_Background, uint16_t Color_Foreground)
{
    uint16_t Page, Column;

    if (Xpoint > ST7789_WIDTH || Ypoint > ST7789_HEIGHT) {
        //Debug("Paint_DrawChar Input exceeds the normal display range\r\n");
        return;
    }

    uint32_t Char_Offset = (Acsii_Char - ' ') * Font->Height * (Font->Width / 8 + (Font->Width % 8 ? 1 : 0));
    const unsigned char *ptr = &Font->table[Char_Offset];

    for (Page = 0; Page < Font->Height; Page ++ ) {
        for (Column = 0; Column < Font->Width; Column ++ ) {

            //To determine whether the font background color and screen background color is consistent
            if (FONT_BACKGROUND == Color_Background) { //this process is to speed up the scan
                if (*ptr & (0x80 >> (Column % 8)))
                    //Paint_SetPixel(Xpoint + Column, Ypoint + Page, Color_Foreground);
					ST7789_DrawPixel(Xpoint + Column, Ypoint + Page, Color_Foreground);
                    // Paint_DrawPoint(Xpoint + Column, Ypoint + Page, Color_Foreground, DOT_PIXEL_DFT, DOT_STYLE_DFT);
            } else {
                if (*ptr & (0x80 >> (Column % 8))) {
                    //Paint_SetPixel(Xpoint + Column, Ypoint + Page, Color_Foreground);
					ST7789_DrawPixel(Xpoint + Column, Ypoint + Page, Color_Foreground);
                    // Paint_DrawPoint(Xpoint + Column, Ypoint + Page, Color_Foreground, DOT_PIXEL_DFT, DOT_STYLE_DFT);
                } else {
                    //Paint_SetPixel(Xpoint + Column, Ypoint + Page, Color_Background);
					ST7789_DrawPixel(Xpoint + Column, Ypoint + Page, Color_Background);
                    // Paint_DrawPoint(Xpoint + Column, Ypoint + Page, Color_Background, DOT_PIXEL_DFT, DOT_STYLE_DFT);
                }
            }
            //One pixel is 8 bits
            if (Column % 8 == 7)
                ptr++;
        }// Write a line
        if (Font->Width % 8 != 0)
            ptr++;
    }// Write all
}

void ST7789_Test(void)
{
	ST7789_Fill_Color(WHITE);
	LL_mDelay(1000);
	//ST7789_WriteString(10, 20, "Speed Test", Font_11x18, RED, WHITE);
	LL_mDelay(1000);
	ST7789_Fill_Color(CYAN);
    LL_mDelay(500);
	ST7789_Fill_Color(RED);
    LL_mDelay(500);
	ST7789_Fill_Color(BLUE);
    LL_mDelay(500);
	ST7789_Fill_Color(GREEN);
    LL_mDelay(500);
	ST7789_Fill_Color(YELLOW);
    LL_mDelay(500);
	ST7789_Fill_Color(BROWN);
    LL_mDelay(500);
	ST7789_Fill_Color(DARKBLUE);
    LL_mDelay(500);
	ST7789_Fill_Color(MAGENTA);
    LL_mDelay(500);
	ST7789_Fill_Color(LIGHTGREEN);
    LL_mDelay(500);
	ST7789_Fill_Color(LGRAY);
    LL_mDelay(500);
	ST7789_Fill_Color(LBBLUE);
    LL_mDelay(500);
	ST7789_Fill_Color(WHITE);
	LL_mDelay(500);

	//ST7789_WriteString(10, 10, "Font test.", Font_16x26, GBLUE, WHITE);
	//ST7789_WriteString(10, 50, "Hello Steve!", Font_7x10, RED, WHITE);
	//ST7789_WriteString(10, 75, "Hello Steve!", Font_11x18, YELLOW, WHITE);
	//ST7789_WriteString(10, 100, "Hello Steve!", Font_16x26, MAGENTA, WHITE);
	LL_mDelay(1000);

	ST7789_Fill_Color(RED);
	//ST7789_WriteString(10, 10, "Rect./Line.", Font_11x18, YELLOW, BLACK);
	ST7789_DrawRectangle(30, 30, 100, 100, WHITE);
	LL_mDelay(1000);

	ST7789_Fill_Color(RED);
	//ST7789_WriteString(10, 10, "Filled Rect.", Font_11x18, YELLOW, BLACK);
	ST7789_DrawFilledRectangle(30, 30, 50, 50, BLUE);
	LL_mDelay(1000);

	ST7789_Fill_Color(RED);
	//ST7789_WriteString(10, 10, "Circle.", Font_11x18, YELLOW, BLACK);
	ST7789_DrawCircle(60, 60, 25, WHITE);
	LL_mDelay(1000);

	ST7789_Fill_Color(RED);
	//ST7789_WriteString(10, 10, "Filled Cir.", Font_11x18, YELLOW, BLACK);
	ST7789_DrawFilledCircle(60, 60, 25, WHITE);
	LL_mDelay(1000);

	ST7789_Fill_Color(RED);
	//ST7789_WriteString(10, 10, "Triangle", Font_11x18, YELLOW, BLACK);
	ST7789_DrawTriangle(30, 30, 30, 70, 60, 40, WHITE);
	LL_mDelay(1000);

	ST7789_Fill_Color(RED);
	//ST7789_WriteString(10, 10, "Filled Tri", Font_11x18, YELLOW, BLACK);
	ST7789_DrawFilledTriangle(30, 30, 30, 70, 60, 40, WHITE);
	LL_mDelay(1000);

	//	If FLASH cannot storage anymore datas, please delete codes below.
	ST7789_Fill_Color(WHITE);
	//ST7789_DrawImage(0, 0, 128, 128, (uint16_t *)saber);
	LL_mDelay(3000);
}
