==> sreeeesanth/Stm32FlappyBird/Core/Src/st7789.c <==
#include "st7789.h"
#include <string.h>
#define HOR_LEN     5

static void ST7789_WriteData(uint8_t *buff, size_t buff_size)
{
    ST7789_Select();
    ST7789_DC_Set();

    while (buff_size > 0) {
        uint16_t chunk_size = buff_size > 65535 ? 65535 : buff_size;
        #ifdef USE_DMA
            if (DMA_MIN_SIZE <= buff_size)
            {
                HAL_SPI_Transmit_DMA(&ST7789_SPI_PORT, buff, chunk_size);
                // Universally safer to check SPI state to ensure DMA and SPI are both finished
                while (HAL_SPI_GetState(&ST7789_SPI_PORT) != HAL_SPI_STATE_READY) {}
            }
            else
                HAL_SPI_Transmit(&ST7789_SPI_PORT, buff, chunk_size, HAL_MAX_DELAY);
        #else
            HAL_SPI_Transmit(&ST7789_SPI_PORT, buff, chunk_size, HAL_MAX_DELAY);
        #endif
        buff += chunk_size;
        buff_size -= chunk_size;
    }

    ST7789_UnSelect();
}

void ST7789_Init(void)
{
    #ifdef USE_DMA
        memset(disp_buf, 0, sizeof(disp_buf));
    #endif
    HAL_Delay(10);
    ST7789_RST_Clr();
    HAL_Delay(10);
    ST7789_RST_Set();
    HAL_Delay(20);

    ST7789_WriteCommand(ST7789_COLMOD);
    ST7789_WriteSmallData(ST7789_COLOR_MODE_16bit);
    ST7789_WriteCommand(0xB2);
    {
        uint8_t data[] = {0x0C, 0x0C, 0x00, 0x33, 0x33};
        ST7789_WriteData(data, sizeof(data));
    }
    ST7789_SetRotation(ST7789_ROTATION);

    ST7789_WriteCommand(0XB7);
    ST7789_WriteSmallData(0x35);
    ST7789_WriteCommand(0xBB);
    ST7789_WriteSmallData(0x19);
    ST7789_WriteCommand(0xC0);
    ST7789_WriteSmallData (0x2C);
    ST7789_WriteCommand (0xC2);
    ST7789_WriteSmallData (0x01);
    ST7789_WriteCommand (0xC3);
    ST7789_WriteSmallData (0x12);
    ST7789_WriteCommand (0xC4);
    ST7789_WriteSmallData (0x20);
    ST7789_WriteCommand (0xC6);
    ST7789_WriteSmallData (0x0F);
    ST7789_WriteCommand (0xD0);
    ST7789_WriteSmallData (0xA4);
    ST7789_WriteSmallData (0xA1);

    ST7789_WriteCommand(0xE0);
    {
        uint8_t data[] = {0xD0, 0x04, 0x0D, 0x11, 0x13, 0x2B, 0x3F, 0x54, 0x4C, 0x18, 0x0D, 0x0B, 0x1F, 0x23};
        ST7789_WriteData(data, sizeof(data));
    }

    ST7789_WriteCommand(0xE1);
    {
        uint8_t data[] = {0xD0, 0x04, 0x0C, 0x11, 0x13, 0x2C, 0x3F, 0x44, 0x51, 0x2F, 0x1F, 0x1F, 0x20, 0x23};
        ST7789_WriteData(data, sizeof(data));
    }
    ST7789_WriteCommand (ST7789_INVOFF);
    ST7789_WriteCommand (ST7789_SLPOUT);
    ST7789_WriteCommand (ST7789_NORON);
    ST7789_WriteCommand (ST7789_DISPON);

    HAL_Delay(50);
    ST7789_Fill_Color(BLACK);
}

void ST7789_WriteChar(uint16_t x, uint16_t y, char ch, FontDef font, uint16_t color, uint16_t bgcolor)
{
    uint32_t i, b, j;
    ST7789_SetAddressWindow(x, y, x + font.width - 1, y + font.height - 1);

    uint16_t swapped_color = (color >> 8) | (color << 8);
    uint16_t swapped_bg = (bgcolor >> 8) | (bgcolor << 8);

    #ifdef USE_DMA
    uint32_t total_pixels = font.width * font.height;
    if (total_pixels <= (ST7789_WIDTH * HOR_LEN)) {
        uint32_t idx = 0;
        for (i = 0; i < font.height; i++) {
            b = font.data[(ch - 32) * font.height + i];
            for (j = 0; j < font.width; j++) {
                if ((b << j) & 0x8000) disp_buf[idx++] = swapped_color;
                else disp_buf[idx++] = swapped_bg;
            }
        }
        ST7789_Select();
        ST7789_DC_Set();
        HAL_SPI_Transmit_DMA(&ST7789_SPI_PORT, (uint8_t *)disp_buf, total_pixels * 2);
        while (HAL_SPI_GetState(&ST7789_SPI_PORT) != HAL_SPI_STATE_READY) {}
        ST7789_UnSelect();
        return;
    }
    #endif

    // Fallback for non-DMA or giant fonts
    ST7789_Select();
    ST7789_DC_Set();
    for (i = 0; i < font.height; i++) {
        b = font.data[(ch - 32) * font.height + i];
        for (j = 0; j < font.width; j++) {
            uint8_t data[] = { ((b << j) & 0x8000) ? (color >> 8) : (bgcolor >> 8),
                               ((b << j) & 0x8000) ? (color & 0xFF) : (bgcolor & 0xFF) };
            HAL_SPI_Transmit(&ST7789_SPI_PORT, data, 2, HAL_MAX_DELAY);
        }
    }
    ST7789_UnSelect();
}

void ST7789_Test(void)
{
    ST7789_Fill_Color(WHITE);
    HAL_Delay(500);
    ST7789_Fill_Color(BLUE);
    HAL_Delay(500);
    ST7789_Fill_Color(RED);
    HAL_Delay(500);
}
